# syncpair

./: .dockerignore  Cargo.toml  DESCRIPTION.md  README.md
.github/workflows/: release.yml  test.yml
docker/: Dockerfile  docker-compose.yml
examples/: client_config.yaml
src/: client.rs  lib.rs  main.rs  multi_client.rs  server.rs  types.rs  utils.rs
tests/: exclude_patterns.rs  integration_tests.rs  journal_exclusion_advanced.rs  mod.rs  multi_client.rs  server_shutdown_during_upload.rs  shared_directory_propagation_test.rs  upload_error_handling.rs  upload_resumption_test.rs
tests/common/: mod.rs
tests/fixtures/configs/: test_client2.sh  test_client_a.yaml  test_client_b.yaml  test_directory_isolation.yaml  test_exclude_patterns.yaml  test_shared_demo1.yaml  test_shared_demo2.yaml  test_shared_directories.sh  test_shared_storage.yaml  test_shared_storage_bob.yaml
