[package]
name = "syncit"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
warp = "0.3"
notify = "6.0"
urlencoding = "2.1"

[[bin]]
name = "syncit"
path = "src/main.rs"