[package]
name = "syncpair"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
warp = "0.3"
notify = "6.0"
urlencoding = "2.1"
glob = "0.3"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "5.0"
duckdb = { version = "1.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "syncpair"
path = "src/main.rs"
